text align fixed

--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -330,6 +330,9 @@ img{
   filter: drop-shadow(0 12px 8px rgba(0,0,0,.2))
 }
 
+.product__fragance{
+  text-align: center;
+}
 
 .product__name, .product__price{
   font-size: var(--normal-font-size);
